# ResumeGenerationApp

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/web/: Dockerfile  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ScoreMeter.tsx
apps/web/lib/: api.ts
apps/web/types/: tailoring.ts
docs/: API.md  ARCHITECTURE.md  DATABASE.md  PRD.md  ROADMAP.md
infra/docker/: docker-compose.yml
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/ai/: gateway.py  openai_provider.py  providers.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: tailoring.py
services/api/app/core/: config.py  logging.py
services/api/app/prompts/: bullet_rewrite_grounded_v1.md  jd_extract_v1.md  resume_extract_v1.md  scorecard_explain_v1.md
services/api/app/schemas/: __init__.py  ai.py  ats.py  job_description.py  resume.py  scorecard.py  tailoring.py  template.py
services/api/app/services/: __init__.py  ai_rewrite_validator.py  ats_analysis.py  ats_report_renderer.py  document_parser.py  export_service.py  jd_parser.py  pdf_renderer.py  resume_parser.py  scoring.py  tailoring_engine.py  taxonomy.py  template_analyzer.py  template_fidelity.py  template_preserving_renderer.py  text_utils.py
services/api/tests/: test_ai_rewriting.py  test_ats_analysis.py  test_tailoring_pipeline.py  test_template_fidelity.py
