[project]
name = "resume-generation-api"
version = "0.1.0"
description = "FastAPI service for grounded ATS resume generation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10.0",
  "structlog>=24.2.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

